--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,7 @@
 @source '../../vendor/livewire/flux/stubs/**/*.blade.php';
 
 @custom-variant dark (&:where(.dark, .dark *));
+@custom-variant hover (&:hover);
 
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -26,6 +27,23 @@
     --color-accent: var(--color-neutral-800);
     --color-accent-content: var(--color-neutral-800);
     --color-accent-foreground: var(--color-white);
+
+
+
+
+    --animate-scanline: scanline 6s infinite;
+    --animate-scanlines: scanlines 1s steps(60)infinite;
+
+    @keyframes scanline {
+        0% {
+            transform: translate3d(0, 200000%, 0);
+        }
+    }
+    @keyframes scanlines {
+        0% {
+            background-position: 0 50%;
+        }
+    }
 }
 
 @layer theme {
@@ -33,6 +51,43 @@
         --color-accent: var(--color-white);
         --color-accent-content: var(--color-white);
         --color-accent-foreground: var(--color-neutral-800);
+    }
+
+
+    .scanlines {
+        overflow: hidden;
+        position: relative;
+    }
+    
+    .scanlines:before,
+    .scanlines:after {
+        display: block;
+        pointer-events: none;
+        content: "";
+        position: absolute;
+    }
+
+    .scanlines:before {
+        width: 100%;
+        height: 2px;
+        z-index: 2147483649;
+        background: rgba(0, 0, 0, 0.3);
+        opacity: 0.75;
+        animation: scanline 6s linear infinite;
+    }
+    .scanlines:after {
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 2147483648;
+        background: linear-gradient(
+            to bottom,
+            transparent 50%,
+            rgba(0, 0, 0, 0.3) 51%
+        );
+        background-size: 100% 4px;
+        animation: scanlines 1s steps(60) infinite;
     }
 }
 
